<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item

        android:id="@id/home_flow"
        android:icon="@drawable/navigation_home_selector"
        android:title="@string/home" />

    <item
        android:id="@id/explore_flow"
        android:icon="@drawable/navigation_search_selector"
        android:title="@string/explore" />

    <item
        android:id="@id/camera_flow"
        android:icon="@drawable/ic_create"
        android:title="" />
    <item
        android:id="@+id/notification_flow"
        android:enabled="true"
        android:icon="@drawable/navigation_chat_selector"
        android:title="@string/recent"/>

    <item
        android:id="@id/profile_flow"
        android:icon="@drawable/navigation_profile_selector"
        android:title="@string/profile" />


</menu>