<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_introscreen"
        android:scaleType="centerCrop"
        tools:context=".presentation.appintro.IntroductionFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="130dp"
            android:layout_height="120dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.74"
            app:srcCompat="@drawable/ic_myworldintrologo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_30"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/intro_D"
            android:textColor="@color/cpTextDark"
            android:textFontWeight="700"
            android:textSize="@dimen/font_size_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_45"
            android:layout_marginHorizontal="@dimen/dimen_20"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_large_background"
            android:elevation="0dp"
            android:gravity="center"
            android:stateListAnimator="@null"
            android:text="@string/action_onboard_welcome"
            android:textAllCaps="false"
            android:textColor="@color/cpWhite"
            android:textSize="@dimen/font_size_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_40"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/terms_and_privacy_policies"
            android:textColor="@color/cpTextDark"
            android:textColorLink="@color/cpTextDark"
            android:textFontWeight="600"
            android:textSize="@dimen/font_size_11"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>